@@ -9,6 +9,7 @@ v0.7.0 (19 Jun 2011)
  * Fixed a logic error that would cause the user info dialog not to be shown
    automatically when suppression of repeated auth requests was disabled
  * Added option to block authorization requests that contain hyperlinks
+ * Added option to deny authorization requests using a regular expression
  * Corrected text for the "Suppress repeated authorization requests" option
  * Changed license to GPLv3
  * Added Russian translation (thanks to Anatoliy Kozlov)
